--- a/property_select.css
+++ b/property_select.css
@@ -218,6 +218,13 @@ body {
   font-weight: 600;
 }
 
+.completion-date {
+  font-size: 12px;
+  color: var(--mantine-color-blue-6);
+  font-weight: 500;
+  margin-top: 2px;
+}
+
 .property-arrow {
   width: 20px;
   height: 20px;
